@@ -68,13 +68,12 @@ The simplest way to compile this package is:
      with the distribution.
      
   6. Type "make install_services_ubuntu" to install services for Ubuntu
-     and "make install_service_fedora". For now services
-     work on Ubuntu, with Fedora being the next target. Paac and paas
-     services are installed. They take the configuration from /etc/paagent
+     and "make install_service_fedora".  Paac and paas services will be
+     installed. They take the configuration from /etc/paagent
      and log messages to /var/log/paagent.
   7. Type "make remove_services_ubuntu" or "make remove_services_fedora" 
      to remove everything. 
-
+  8. Type make rpm to build a Fedora RPM in rpmbuild/RPMS
 Compilers and Options
 =====================
 
