@@ -1,7 +1,7 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 AC_PREREQ([2.64])
-AC_INIT(paagent, 0.1.1, vjuresch@sophia.inria.fr)
+AC_INIT(paagent, 0.1.3, vjuresch@sophia.inria.fr)
 AM_INIT_AUTOMAKE([dist-bzip2])
 #AM_INIT_AUTOMAKE([subdir-objects])
 AC_CONFIG_SRCDIR([config.h.in])
